src/objects/Player__c.object
<CustomObject>
    <fields>
        <fullName>AllianceName__c</fullName>
        <label>AllianceName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlayerId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>PlayerId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Player_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Player Account</label>
        <referenceTo>Player_Account__c</referenceTo>
        <relationshipLabel>Player</relationshipLabel>
        <relationshipName>Player</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SessionId__c</fullName>
        <label>SessionId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartSessionId__c</fullName>
        <label>StartSessionId</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>World__c</fullName>
        <label>World</label>
        <referenceTo>World__c</referenceTo>
        <relationshipLabel>Player</relationshipLabel>
        <relationshipName>Player</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Player</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Player Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Player</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>